src/objects/GLXY_LeaseProjectforSnapshot__c.object
<CustomObject>
    <fields>
        <fullName>Acceptance620Date__c</fullName>
        <label>Date 620</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AnnualRent__c</fullName>
        <label>New Annual Rent</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Antennas__c</fullName>
        <label>New Antennas</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AssociatedLeases_lkup__c</fullName>
        <label>Associated Leases (Expiration Date)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDGFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include in Budget Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BaseStructParkSpaces__c</fullName>
        <label>New Base Structured Parking Spaces</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BaseSurfParkSpaces__c</fullName>
        <label>New Base Surface Parking Spaces</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_Exclusion_Reason__c</fullName>
        <label>Budget Exclusion Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CY_Obligation_IA__c</fullName>
        <label>Effective Year Obligation IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CY_Obligation_NOA__c</fullName>
        <label>Effective Year Obligation NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CalculatedOldIASqFt__c</fullName>
        <label>Calculated Old IA Sq Ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CalculatedOldNOASqFt__c</fullName>
        <label>Calculated Old NOA Sq Ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CancelARentIA__c</fullName>
        <label>Cancellation Annual Rent IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CancelARentNOA__c</fullName>
        <label>Cancellation Annual Rent NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CancelPYCostIA__c</fullName>
        <label>Cancellation Part Year Cost IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CancelPYCostNOA__c</fullName>
        <label>Cancellation Part Year Cost NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CancelSqFtIA__c</fullName>
        <label>Cancellation Sq Ft IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CancelSqFtNOA__c</fullName>
        <label>Cancellation Sq Ft NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CancellationAnnualRent__c</fullName>
        <formula>CancelARentIA__c + CancelARentNOA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cancellation Annual Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CancellationPartYearCost__c</fullName>
        <formula>CancelPYCostIA__c + CancelPYCostNOA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cancellation Part Year Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CancellationSqFt__c</fullName>
        <formula>CancelSqFtIA__c + CancelSqFtNOA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cancellation Sq Ft</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChangeinIASQFt__c</fullName>
        <formula>IASquareFeet__c - OldIASqFt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change in IA Sq Ft</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChangeinNOASQFt__c</fullName>
        <formula>NOASquareFeet__c - OldNOASqFt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change in NOA Sq Ft</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CheckCOApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check CO Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DelegatedProject__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delegated Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delegated_Project_Rep_lkp__c</fullName>
        <formula>IF( DelegatedProject__c =true, &apos;True&apos;, &apos;False&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delegated Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EffectiveDateFY__c</fullName>
        <formula>Text(YEAR( EffectiveDate__c + 92 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Date FY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EscalARentIA__c</fullName>
        <label>Escalation Annual Rent IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EscalARentNOA__c</fullName>
        <label>Escalation Annual Rent NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EscalPYCostIA__c</fullName>
        <label>Escalation Part Year Cost IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EscalPYCostNOA__c</fullName>
        <label>Escalation Part Year Cost NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EscalSqFtIA__c</fullName>
        <label>Escalation Sq Ft IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EscalSqFtNOA__c</fullName>
        <label>Escalation Sq Ft NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EscalationAnnualRent__c</fullName>
        <formula>EscalARentIA__c + EscalARentNOA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Escalation Annual Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EscalationPartYearCost__c</fullName>
        <formula>EscalPYCostIA__c + EscalPYCostNOA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Escalation Part Year Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EscalationSqFt__c</fullName>
        <formula>EscalSqFtIA__c + EscalSqFtNOA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Escalation Sq Ft</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExpanARentIA__c</fullName>
        <label>Expansion Annual Rent IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExpanARentNOA__c</fullName>
        <label>Expansion Annual Rent NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExpanPYCostIA__c</fullName>
        <label>Expansion Part Year Cost IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExpanPYCostNOA__c</fullName>
        <label>Expansion Part Year Cost NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExpanPYCostTotal__c</fullName>
        <formula>ExpanPYCostIA__c + ExpanPYCostNOA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expansion Part Year Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExpanSqFtIA__c</fullName>
        <label>Expansion Sq Ft IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExpanSqFtNOA__c</fullName>
        <label>Expansion Sq Ft NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExpansionAnnualRent__c</fullName>
        <formula>ExpanARentIA__c + ExpanARentNOA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expansion Annual Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExpansionSqFt__c</fullName>
        <formula>ExpanSqFtIA__c + ExpanSqFtNOA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expansion Sq Ft</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IAConversionDate__c</fullName>
        <label>IA/NOA Conversion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IAConverstionFY__c</fullName>
        <formula>IF( 
ISBLANK(IAConversionDate__c), 
&quot;2099&quot;, 
Text(YEAR(IAConversionDate__c + 92))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IAConverstionFY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IASquareFeet__c</fullName>
        <label>New IA Sq Ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LandOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Land Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Land__c</fullName>
        <label>New Land</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NOASquareFeet__c</fullName>
        <label>New NOA Sq Ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NewLease__c</fullName>
        <label>New Lease Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewRate__c</fullName>
        <label>New Rate</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OAntennas__c</fullName>
        <label>Old Antennas</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OBaseStructParkSpaces__c</fullName>
        <label>Old Base Structured Parking Spaces</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OBaseSurfParkSpaces__c</fullName>
        <label>Old Base Surface Parking Spaces</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OLand__c</fullName>
        <label>Old Land</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OldIASqFt__c</fullName>
        <label>Old IA Sq Ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OldNOASqFt__c</fullName>
        <label>Old NOA Sq Ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OldRate__c</fullName>
        <label>Old Rate</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Old_Annual_Rent__c</fullName>
        <label>Old Annual Rent</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Old_Square_Feet__c</fullName>
        <label>Old Sq Ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ParkingOnly__c</fullName>
        <label>Parking-Only</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PastDueIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Past Due Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PreCertificationDate__c</fullName>
        <label>Pre Certification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProcessedDateFY__c</fullName>
        <formula>Text(YEAR(ProcessedDate__c + 92 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process Date FY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessedDate__c</fullName>
        <label>Process Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProjectID__c</fullName>
        <label>Project ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectStatus__c</fullName>
        <label>Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Change in Services</fullName>
                </value>
                <value>
                    <fullName>Change in SF</fullName>
                </value>
                <value>
                    <fullName>Change To External Contacts</fullName>
                </value>
                <value>
                    <fullName>Escalation</fullName>
                </value>
                <value>
                    <fullName>Expansion</fullName>
                </value>
                <value>
                    <fullName>Extension</fullName>
                </value>
                <value>
                    <fullName>Holdover</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>New/Replacing</fullName>
                </value>
                <value>
                    <fullName>Operating Cost Escalation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Real Estate Tax Escalation</fullName>
                </value>
                <value>
                    <fullName>Reduction</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Step Rent Decrease</fullName>
                </value>
                <value>
                    <fullName>Step Rent Increase</fullName>
                </value>
                <value>
                    <fullName>Succeeding</fullName>
                </value>
                <value>
                    <fullName>Superseding</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prospectus_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prospectus Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prospectus_Number__c</fullName>
        <label>Prospectus Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegionCd__c</fullName>
        <label>Region Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SnapshotName__c</fullName>
        <label>Snapshot Name</label>
        <referenceTo>Galaxy_Snapshot__c</referenceTo>
        <relationshipLabel>Lease Projects for Snapshot</relationshipLabel>
        <relationshipName>GLXY_LeaseProjectforSnapshot</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Source_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Record</label>
        <referenceTo>Glxy_LeaseProjects__c</referenceTo>
        <relationshipLabel>GLXY_LeaseProjectforSnapshot</relationshipLabel>
        <relationshipName>GLXY_LeaseProjectforSnapshot</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SquareFeet__c</fullName>
        <label>New Sq Ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TeamCode__c</fullName>
        <label>Team Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_IA_PYC__c</fullName>
        <label>Total IA PYC</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_NOA_PYC__c</fullName>
        <label>Total NOA PYC</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_PYC__c</fullName>
        <formula>Total_IA_PYC__c +  Total_NOA_PYC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total PYC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UniqueID__c</fullName>
        <externalId>true</externalId>
        <label>UniqueID</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>eEorA__c</fullName>
        <label>Effective Date Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Actual</fullName>
                </value>
                <value>
                    <fullName>Estimate</fullName>
                </value>
                <value>
                    <fullName>Voided</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Lease Project for Snapshot</label>
    <nameField>
        <displayFormat>LPH-{0000}</displayFormat>
        <label>Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lease Projects for Snapshot</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>